@@ -3,9 +3,10 @@
 package logp
 
 import (
+	"github.com/pkg/errors"
 	"go.uber.org/zap/zapcore"
 )
 
 func newSyslog(_ zapcore.Encoder, _ zapcore.LevelEnabler) (zapcore.Core, error) {
-	return zapcore.NewNopCore(), nil
+	return nil, errors.New("syslog is not supported on this OS")
 }
